Sprint 3 initial commit